parameterized the competition

--- a/app/views/user/urkunde.tex.erb
+++ b/app/views/user/urkunde.tex.erb
@@ -8,7 +8,7 @@
 %\eintrag{Name}{Geburtsjahr, opt.}{Verein, opt.}{Platz}{Zeit}{Foto, opt.}
 
 %\eintrag{Bettina Reinhardt}{1971}{}{47}{0:26:16,64}{u_foto}
-\eintrag{<%= @user.firstname %> <%= @user.lastname %>}{<%= @user.result.competition%>}{<%= @user.club %>}{<%= @user.result.rank %>}{<%= @user.result.time %>}{}
+\eintrag{<%= @user.firstname %> <%= @user.lastname %>}{<%= @user.result.competition%>}{<%= @user.club %>}{<%= @user.result.rank %>}{<%= @user.result.time %>}{<%= @strecke %>}
 %\eintrag{Bettina Reinhardt}{1971}{}{47}{0:26:16,64}{u_foto}
 
 
